Add tasks for getting required modules, building custom runtime